third_party/move/move-compiler-v2/tests/more-v1/expansion/number_literal_too_long_u64.exp

Diagnostics:
error: invalid number literal
  ┌─ tests/more-v1/expansion/number_literal_too_long_u64.move:4:9
  │
4 │         0x1FFFFFFFFFFFFFFFFu64;
  │         ^^^^^^^^^^^^^^^^^^^^^^ Invalid number literal. The given literal cannot fit into 'u64'

error: invalid number literal
  ┌─ tests/more-v1/expansion/number_literal_too_long_u64.move:6:9
  │
6 │         18446744073709551616u64;
  │         ^^^^^^^^^^^^^^^^^^^^^^^ Invalid number literal. The given literal cannot fit into 'u64'
